--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.3.1"
+    "astro": "^3.3.1",
+    "markdown-it": "^13.0.2",
+    "mdx": "^0.3.1",
+    "nanostores": "^0.9.4",
+    "prisma": "^5.4.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sanitize-html": "^2.11.0",
+    "solid-js": "^1.8.3"
   }
 }
