--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/react": "^3.0.3",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/solid-js": "^3.0.2",
+    "@astrojs/vercel": "^5.0.2",
     "@nanostores/solid": "^0.4.2",
     "astro": "^3.3.1",
     "markdown-it": "^13.0.2",
