--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/vercel": "^5.0.2",
     "@nanostores/solid": "^0.4.2",
     "astro": "^3.3.1",
+    "js": "^0.1.0",
     "markdown-it": "^13.0.2",
     "mdx": "^0.3.1",
     "nanostores": "^0.9.4",
@@ -25,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanitize-html": "^2.11.0",
+    "solid": "^0.2.1",
     "solid-js": "^1.8.3"
   },
   "devDependencies": {
